--- a/styles/style.css
+++ b/styles/style.css
@@ -57,6 +57,7 @@ button{
 .section-heading {
     max-width: 827px ;
     text-align: center;
+    margin:0 auto;
 }
 .section-heading h2{
     font-size:35px ;
@@ -65,7 +66,7 @@ button{
 .section-heading p {
    line-height: 30px;
     color: #757575;
-    margin-bottom: 30px;text-align:justify;
+    
 }
 .about-info .info-card{
     gap: 50px;
@@ -137,4 +138,33 @@ main{
 
 #about .about-container .about-info {
     display: flex; justify-content: space-around;
+}
+#skill {
+    padding-top: 130px;
+}
+#skill .skill-container {
+    width: 71%; max-width: 1140px;
+    margin: 0 auto;
+}
+#skill .skill-container .skill-box {
+   display: flex; gap: 24px;
+}
+.skill-box .skill-card {
+    padding: 30px;
+    border:1px solid greenyellow;
+    max-width: 267px;box-shadow:0px 6px 50px 0px #00000644;
+}
+.skill-card img {
+    max-width: 44px;
+    margin-bottom: 30px;
+}
+.skill-card h3 {
+    font-size: 20px;
+    color: #181818;
+    margin-bottom: 20px;
+
+}
+.skill-card p{ font-size: 16px;
+    line-height: 28px;
+    color:#757575;
 }
