--- a/styles/style.css
+++ b/styles/style.css
@@ -126,7 +126,7 @@ main{
     background-position: top left,bottom right;
     background-color:#fff8f3;
 }
-#about {
+#about,#skill,#resume {
     padding-top: 130px;
 }
 #about .about-container {
@@ -139,9 +139,9 @@ main{
 #about .about-container .about-info {
     display: flex; justify-content: space-around;
 }
-#skill {
-    padding-top: 130px;
-}
+
+    
+
 #skill .skill-container {
     width: 71%; max-width: 1140px;
     margin: 0 auto;
@@ -167,4 +167,31 @@ main{
 .skill-card p{ font-size: 16px;
     line-height: 28px;
     color:#757575;
+}
+#resume .resume-container {
+    max-width: 1140px;
+    width: 71%; margin: 113px auto 0;
+    display: flex;gap: 24px;
+}
+.resume-container .section-title {
+    color: #474747;font-size: 30px;
+    margin-bottom: 30px;
+}
+.resume-container hr{
+    margin: 30px 0;
+}
+.resume-card {
+    max-width:511px ;margin-right: 47px;
+}
+.resume-card .card-title {
+    font-size: 25px; font-weight: bold;
+    margin-bottom: 10px;color: #474747;
+} 
+.resume-card .card-info {
+    font-size: 20px; font-weight:600;
+    margin-bottom: 20px;color:#757575;
+} 
+.resume-card .card-text {
+    font-size: 16px; line-height: 28px;
+    margin-bottom: 20px;color: #757575;
 }
